radix-transactions/tests/assets/manifest_generator_error_named_intent_cannot_be_used_in_value_1.diag
error: a NamedIntent(...) cannot currently be used inside a value
  |
1 | CALL_METHOD
2 |     Address("component_sim1cptxxxxxxxxxfaucetxxxxxxxxx000527798379xxxxxxxxxhkrefh")
3 |     "my_method"
4 |     NamedIntent("my_intent")
  |     ^^^^^^^^^^^ cannot be used inside a value
5 | ;
  |