radix-transactions/tests/assets/manifest_generator_error_named_intent_cannot_be_used_in_value_1.rtm
CALL_METHOD
    Address("component_sim1cptxxxxxxxxxfaucetxxxxxxxxx000527798379xxxxxxxxxhkrefh")
    "my_method"
    NamedIntent("my_intent")
;